--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -85,9 +85,9 @@ h6 {
   font-family: var(--heading-font);
 }
 
-/* PHP Email Form Messages
+/* js Email Form Messages
 ------------------------------*/
-.php-email-form .error-message {
+.js-email-form .error-message {
   display: none;
   background: #df1529;
   color: #ffffff;
@@ -97,7 +97,7 @@ h6 {
   font-weight: 600;
 }
 
-.php-email-form .sent-message {
+.js-email-form .sent-message {
   display: none;
   color: #ffffff;
   background: #059652;
@@ -107,7 +107,7 @@ h6 {
   font-weight: 600;
 }
 
-.php-email-form .loading {
+.js-email-form .loading {
   display: none;
   background: var(--surface-color);
   text-align: center;
@@ -133,7 +133,7 @@ h6 {
 }
 
 
-.php-email-form .loading:before {
+.js-email-form .loading:before {
   content: "";
   display: inline-block;
   border-radius: 50%;
@@ -142,10 +142,23 @@ h6 {
   margin: 0 10px -6px 0;
   border: 3px solid var(--accent-color);
   border-top-color: var(--surface-color);
-  animation: php-email-form-loading 1s linear infinite;
+  animation: js-email-form-loading 1s linear infinite;
 }
 
-@keyframes php-email-form-loading {
+.loading {
+  display: none;
+  color: blue;
+}
+.sent-message {
+  display: none;
+  color: green;
+}
+.error-message {
+  display: none;
+  color: red;
+}
+
+@keyframes js-email-form-loading {
   0% {
     transform: rotate(0deg);
   }
@@ -1489,13 +1502,13 @@ section,
   font-size: 14px;
 }
 
-.contact .php-email-form {
+.contact .js-email-form {
   height: 100%;
 }
 
-.contact .php-email-form input[type=text],
-.contact .php-email-form input[type=email],
-.contact .php-email-form textarea {
+.contact .js-email-form input[type=text],
+.contact .js-email-form input[type=email],
+.contact .js-email-form textarea {
   font-size: 14px;
   padding: 10px 15px;
   box-shadow: none;
@@ -1505,19 +1518,19 @@ section,
   border-color: color-mix(in srgb, var(--default-color), transparent 80%);
 }
 
-.contact .php-email-form input[type=text]:focus,
-.contact .php-email-form input[type=email]:focus,
-.contact .php-email-form textarea:focus {
+.contact .js-email-form input[type=text]:focus,
+.contact .js-email-form input[type=email]:focus,
+.contact .js-email-form textarea:focus {
   border-color: var(--accent-color);
 }
 
-.contact .php-email-form input[type=text]::placeholder,
-.contact .php-email-form input[type=email]::placeholder,
-.contact .php-email-form textarea::placeholder {
+.contact .js-email-form input[type=text]::placeholder,
+.contact .js-email-form input[type=email]::placeholder,
+.contact .js-email-form textarea::placeholder {
   color: color-mix(in srgb, var(--default-color), transparent 70%);
 }
 
-.contact .php-email-form button[type=submit] {
+.contact .js-email-form button[type=submit] {
   color: var(--contrast-color);
   background: var(--accent-color);
   border: 0;
@@ -1526,7 +1539,7 @@ section,
   border-radius: 4px;
 }
 
-.contact .php-email-form button[type=submit]:hover {
+.contact .js-email-form button[type=submit]:hover {
   background: color-mix(in srgb, var(--accent-color), transparent 20%);
 }
 
